--- a/git-talk.html
+++ b/git-talk.html
@@ -59,11 +59,15 @@
         </section>
 
         <section>
-            <ol>
-                <li>Bullet points.</li>
-                <li>Complex section.</li>
-                <li>Simple section.</li>
-            </ol>
+            <section>
+                <p>¿Y esto cómo funciona?</p>
+                <ul>
+                    <li class="fragment fade-up">Editar - git add</li>
+                    <li class="fragment fade-up">Guardar - git commit</li>
+                    <li class="fragment fade-up">Subir - git push</li>
+                    <li class="fragment fade-up">Repetir</li>
+                </ul>
+            </section>
         </section>
 
         <section>
