--- a/git-talk.html
+++ b/git-talk.html
@@ -72,22 +72,43 @@
 
         <section>
             <section>
-                <h2>Complex section</h2>
+                <h2>Funciones</h2>
             </section>
 
-            <section>
-                <p>
-                    Here you will find some examples of images, code samples
-                    and <a href="/index.html" target="_blank">links</a>.
-                </p>
-            </section>
-
-            <section>
-                <img alt="Chain link" src="./imgs/link.png"/>
-                <p>
-                    Put common images in the root folder but keep talk specific ones inside the
-                    presentation folder. If you need to borrow an image, <strong>cross link it</strong>.
-                </p>
+            <section data-transition="none">
+<pre style="top: 25%; font-size: .2em; width: 100%"><code class="js" data-noescape data-trim data-dim>
+git help --all
+usage: git [--version] [--help] [-C <path>] [-c name=value]
+           [--exec-path[=<path>]] [--html-path] [--man-path] [--info-path]
+           [-p|--paginate|--no-pager] [--no-replace-objects] [--bare]
+           [--git-dir=<path>] [--work-tree=<path>] [--namespace=<name>]
+           <command> [<args>]
+<span style="color: green">
+  add                       clone                     <mark>fast-import               interpret-trailers        notes                     remote-testsvn            submodule</mark>
+  <mark>add--interactive          column                    fetch                     log                       p4                        repack                    subtree</mark>
+  <mark>am</mark>                        commit                    <mark>fetch-pack                ls-files                  pack-objects              replace                   svn</mark>
+  <mark>annotate                  commit-tree               filter-branch             ls-remote                 pack-redundant            request-pull              symbolic-ref</mark>
+  apply                     <mark>config                    fmt-merge-msg             ls-tree                   pack-refs                 rerere                    tag</mark>
+  <mark>archimport                count-objects             for-each-ref              mailinfo                  patch-id</mark>                  reset                     <mark>unpack-file</mark>
+  <mark>archive                   credential                format-patch              mailsplit                 prune                     rev-list                  unpack-objects</mark>
+  <mark>bisect                    credential-cache          fsck</mark>                      merge                     <mark>prune-packed              rev-parse                 update-index</mark>
+  <mark>bisect--helper            credential-cache--daemon  fsck-objects              merge-base</mark>                pull                      revert                    <mark>update-ref</mark>
+  blame                     <mark>credential-osxkeychain    gc                        merge-file</mark>                push                      rm                        <mark>update-server-info</mark>
+  branch                    <mark>credential-store          get-tar-commit-id         merge-index               quiltimport               send-email                upload-archive</mark>
+  <mark>bundle                    cvsexportcommit           grep                      merge-octopus             read-tree                 send-pack                 upload-pack</mark>
+  <mark>cat-file                  cvsimport                 gui--askpass              merge-one-file</mark>            rebase                    <mark>sh-i18n--envsubst         var</mark>
+  <mark>check-attr                cvsserver                 hash-object               merge-ours                receive-pack              shell                     verify-commit</mark>
+  <mark>check-ignore              daemon                    help                      merge-recursive           reflog                    shortlog                  verify-pack</mark>
+  <mark>check-mailmap             describe                  http-backend              merge-resolve             relink                    show                      verify-tag</mark>
+  <mark>check-ref-format</mark>          diff                      <mark>http-fetch                merge-subtree</mark>             remote                    <mark>show-branch               web--browse</mark>
+  checkout                  <mark>diff-files                http-push                 merge-tree                remote-ext                show-index                whatchanged</mark>
+  <mark>checkout-index            diff-index                imap-send                 mergetool                 remote-fd                 show-ref                  write-tree</mark>
+  <mark>cherry                    diff-tree                 index-pack                mktag                     remote-ftp                stage</mark>
+  cherry-pick               <mark>difftool</mark>                  init                      <mark>mktree                    remote-ftps</mark>               stash
+  <mark>citool                    difftool--helper          init-db</mark>                   mv                        <mark>remote-http</mark>               status
+  clean                     <mark>fast-export               instaweb                  name-rev                  remote-https              stripspace</mark>
+    </span>
+                </code></pre>
             </section>
 
             <section>
