Add two new slides

--- a/git-talk.html
+++ b/git-talk.html
@@ -117,11 +117,24 @@
             </div>
         </section>
 
-        <section data-markdown>
-            ## Markdown!
+        <section>
+            <section>
+                <h3>Resumiendo</h3>
+                <ul>
+                    <li class="fragment fade-up">Guardar estados de archivos</li>
+                    <li class="fragment fade-up">Trabajo en equipo y multidispositivo</li>
+                    <li class="fragment fade-up">Volver a versiones anteriores sin dolores de cabeza</li>
+                </ul>
+            </section>
 
-            And remember you can use [markdown](https://github.com/hakimel/reveal.js#markdown)
-            with `data-markdown`.
+            <section>
+                <h3>Superconsejitos</h3>
+                <ul>
+                    <li class="fragment fade-up">Los commits son gratis</li>
+                    <li class="fragment fade-up">Las florituras hacen llorar al niño Jesús</li>
+                    <li class="fragment fade-up">Usar ramas para no joder la marrana</li>
+                </ul>
+            </section>
         </section>
     </div>
 </div>
