Add Home page and GraphQL Talk

--- a/git-talk.html
+++ b/git-talk.html
@@ -136,6 +136,13 @@
                 </ul>
             </section>
         </section>
+
+        <section>
+            <header>
+                <h1></h1>
+                <p>A practicar!</p>
+            </header>
+        </section>
     </div>
 </div>
 
