Fix mutation codeblock style width

--- a/graphql-talk.html
+++ b/graphql-talk.html
@@ -123,7 +123,7 @@
 
             <section>
                 <h3>Mutation - Crear, modificar o borrar</h3>
-                <pre><code class="n1ql" data-noescape data-trim data-dim>
+                <pre style="width: 90%"><code class="n1ql" data-noescape data-trim data-dim>
                     mutation {
                         createPerson(name: "Antonio", email: "atalgaba@gmail.com", 26) {
                             name
