Restyle home buttons

--- a/index.html
+++ b/index.html
@@ -16,14 +16,8 @@
 
 <div class="artboard">
     <div class="buttons">
-    <div class="button" onclick="goTo('git-talk.html#/')">
-        <div class="links noselect"><a>Amoh pallá</a></div>
-        <div class="overlay noselect"><a>Piensa en git</a></div>
-    </div>
-    <div class="button" onclick="goTo('graphql-talk.html#/')">
-        <div class="links noselect"><a>Amoh pallá</a></div>
-        <div class="overlay noselect"><a>GraphQL</a></div>
-    </div>
+        <a href="git-talk.html#/" class="btn-flip" data-back="Amoh pall&aacute;" data-front="Piensa en git"></a>
+        <a href="graphql-talk.html#/" class="btn-flip" data-back="Amoh pall&aacute;" data-front="GraphQL"></a>
     </div>
 </div>
 <footer>
