--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a target="_blank" href="https://codepen.io/atalgaba/"><i class="fab fa-codepen"></i></a>
         </div>
         <div class="bottom">
-            <a>made with <i class="fas fa-heart beat"></i> by <a target="_blank" href="https://codepen.io/akshaycodes/">ATAlgaba</a></a>
+            <a>made with <i class="fas fa-heart beat"></i> by <a target="_blank" href="https://atalgaba.com/">ATAlgaba</a></a>
         </div>
     </div>
 </footer>
