Typo on a workd

--- a/git-talk.html
+++ b/git-talk.html
@@ -68,7 +68,7 @@
 
         <section>
             <section>
-                <h2>Funciones</h2>
+                <h2>Subcomandos</h2>
             </section>
 
             <section>
