--- a/git-talk.html
+++ b/git-talk.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>Piensa en git - AT Algaba</title>
+    <title>Ola caracola</title>
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/reveal.css">
@@ -13,17 +13,6 @@
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="lib/css/solarized-light.css">
-
-    <link rel="stylesheet" href="css/custom.css"/>
-
-    <!-- Printing and PDF exports -->
-    <script>
-        var link = document.createElement('link');
-        link.rel = 'stylesheet';
-        link.type = 'text/css';
-        link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
-        document.getElementsByTagName('head')[0].appendChild(link);
-    </script>
 
 
     <!-- Load the JS file -->
@@ -34,138 +23,6 @@
 <section id="tabzilla">
     <a href="https://atalgaba.com/">ATAlgaba</a>
 </section>
-
-<div class="reveal">
-    <div class="slides">
-        <section data-state="first-slide">
-            <header>
-                <h1>Piensa en git</h1>
-                <div id="first-slide"></div>
-            </header>
-        </section>
-
-        <section>
-            <section>
-                <h2>Qué es git</h2>
-            </section>
-            <section>
-                <img alt="Not final.doc" data-src="./img/slides/notFinalDoc.gif"/>
-            </section>
-            <section>
-                <img alt="How it works" data-src="./img/slides/git.png"/>
-            </section>
-
-            <section>
-                <p>¿Y esto cómo funciona?</p>
-                <ul>
-                    <li class="fragment fade-up">Editar - git add</li>
-                    <li class="fragment fade-up">Guardar - git commit</li>
-                    <li class="fragment fade-up">Subir - git push</li>
-                    <li class="fragment fade-up">Repetir</li>
-                </ul>
-            </section>
-        </section>
-
-        <section>
-            <section>
-                <h2>Subcomandos</h2>
-            </section>
-
-            <section>
-<pre style="top: 25%; font-size: .2em; width: 100%"><code class="js git-commands" data-noescape data-trim data-dim>
-
-  add                       clone                     <mark>fast-import               interpret-trailers        notes                     remote-testsvn            submodule</mark>
-  <mark>add--interactive          column                    fetch                     log                       p4                        repack                    subtree</mark>
-  <mark>am</mark>                        commit                    <mark>fetch-pack                ls-files                  pack-objects              replace                   svn</mark>
-  <mark>annotate                  commit-tree               filter-branch             ls-remote                 pack-redundant            request-pull              symbolic-ref</mark>
-  <mark>apply                     config                    fmt-merge-msg             ls-tree                   pack-refs                 rerere                    tag</mark>
-  <mark>archimport                count-objects             for-each-ref              mailinfo                  patch-id</mark>                  reset                     <mark>unpack-file</mark>
-  <mark>archive                   credential                format-patch              mailsplit                 prune                     rev-list                  unpack-objects</mark>
-  <mark>bisect                    credential-cache          fsck</mark>                      merge                     <mark>prune-packed              rev-parse                 update-index</mark>
-  <mark>bisect--helper            credential-cache--daemon  fsck-objects              merge-base</mark>                pull                      revert                    <mark>update-ref</mark>
-  blame                     <mark>credential-osxkeychain    gc                        merge-file</mark>                push                      rm                        <mark>update-server-info</mark>
-  branch                    <mark>credential-store          get-tar-commit-id         merge-index               quiltimport               send-email                upload-archive</mark>
-  <mark>bundle                    cvsexportcommit           grep                      merge-octopus             read-tree                 send-pack                 upload-pack</mark>
-  <mark>cat-file                  cvsimport                 gui--askpass              merge-one-file</mark>            rebase                    <mark>sh-i18n--envsubst         var</mark>
-  <mark>check-attr                cvsserver                 hash-object               merge-ours                receive-pack              shell                     verify-commit</mark>
-  <mark>check-ignore              daemon                    help                      merge-recursive           reflog                    shortlog                  verify-pack</mark>
-  <mark>check-mailmap             describe                  http-backend              merge-resolve             relink                    show                      verify-tag</mark>
-  <mark>check-ref-format</mark>          diff                      <mark>http-fetch                merge-subtree</mark>             remote                    <mark>show-branch               web--browse</mark>
-  checkout                  <mark>diff-files                http-push                 merge-tree                remote-ext                show-index                whatchanged</mark>
-  <mark>checkout-index            diff-index                imap-send                 mergetool                 remote-fd                 show-ref                  write-tree</mark>
-  <mark>cherry                    diff-tree                 index-pack                mktag                     remote-ftp                stage</mark>
-  cherry-pick               <mark>difftool</mark>                  init                      <mark>mktree                    remote-ftps</mark>               stash
-  <mark>citool                    difftool--helper          init-db</mark>                   mv                        <mark>remote-http</mark>               status
-  clean                     <mark>fast-export               instaweb                  name-rev                  remote-https              stripspace</mark>
-                </code></pre>
-            </section>
-
-            <section data-state="git-history">
-                <div id="git-history"></div>
-            </section>
-        </section>
-
-        <section>
-            <header>
-                <h1>Repositorios Online</h1>
-                <p>Los más conocidos</p>
-            </header>
-            <div class="row">
-                <img alt="GitHub Logo" data-src="./img/github-logo.png"/>
-                <img alt="GitLab Logo" data-src="./img/gitlab-logo.svg"/>
-                <img alt="Bitbucket Logo" data-src="./img/bitbucket-logo.svg"/>
-            </div>
-        </section>
-
-        <section>
-            <section>
-                <h3>Resumiendo</h3>
-                <ul>
-                    <li class="fragment fade-up">Guardar estados de archivos</li>
-                    <li class="fragment fade-up">Trabajo en equipo y multidispositivo</li>
-                    <li class="fragment fade-up">Volver a versiones anteriores sin dolores de cabeza</li>
-                </ul>
-            </section>
-
-            <section>
-                <h3>Superconsejitos</h3>
-                <ul>
-                    <li class="fragment fade-up">Los commits son gratis</li>
-                    <li class="fragment fade-up">Las florituras hacen llorar al niño Jesús</li>
-                    <li class="fragment fade-up">Usar ramas para no joder la marrana</li>
-                </ul>
-            </section>
-        </section>
-
-        <section>
-            <header>
-                <h1></h1>
-                <p>A practicar!</p>
-            </header>
-        </section>
-    </div>
-</div>
-
-<script src="js/reveal.js"></script>
-<script src="js/custom.js"></script>
-
-<script>
-    // More info https://github.com/hakimel/reveal.js#configuration
-    Reveal.initialize({
-        history: true,
-        width: 1220,
-        // More info https://github.com/hakimel/reveal.js#dependencies
-        dependencies: [
-            {src: 'plugin/markdown/marked.js'},
-            {src: 'plugin/markdown/markdown.js'},
-            {src: 'plugin/notes/notes.js', async: true},
-            {
-                src: 'plugin/highlight/highlight.js', async: true, callback: function () {
-                    hljs.initHighlightingOnLoad();
-                }
-            }
-        ]
-    });
-</script>
 </body>
+
 </html>
